it work in prod

--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for roundestphoenix on 2024-10-27T00:53:21-07:00
+# fly.toml app configuration file generated for roundestphoenix on 2024-11-01T23:56:45-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'roundestphoenix'
-primary_region = 'sjc'
+primary_region = 'ord'
 kill_signal = 'SIGTERM'
 
 [build]
